fix(docs): fix incorrect DTO docs
