# internal/apps/rest/docs/swagger.json
@@ -99,7 +99,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.AccountRegisterRequest"
+                            "$ref": "#/definitions/dtos.AccountRegisterReq"
                         }
                     }
                 ],
@@ -177,7 +177,7 @@
                 "message": {
                     "type": "string"
                 },
-                "source_error_message": {
+                "sourceErrorMessage": {
                     "type": "string"
                 },
                 "stack": {
@@ -186,12 +186,12 @@
                         "type": "string"
                     }
                 },
-                "stack_line": {
+                "stackLine": {
                     "type": "string"
                 }
             }
         },
-        "dtos.AccountRegisterRequest": {
+        "dtos.AccountRegisterReq": {
             "type": "object",
             "properties": {
                 "email": {
